Major changes to mature the package

--- a/simple_django_htmx/templates/simple_django_htmx/messages.html
+++ b/simple_django_htmx/templates/simple_django_htmx/messages.html
@@ -1,4 +1,4 @@
-<div style="position: fixed; top: 20px; right: 15px;" id="hx_messages" >
+<div style="position: fixed; top: 20px; right: 15px;z-index:99999" id="hx_messages" >
     <div class="toast mt-3 d-none" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-body">
             <span  id ="toast_message"></span>
